--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,7 +247,14 @@ jobs:
               if: always() && matrix.testname == 'classicmode' && matrix.testmode == 'OFF'
               working-directory: tests/
               run: |
-                  at plotspectra -t 18-22 ${{ matrix.testname }}_testrun
+                  at plotspectra --frompackets -t 18-22 ${{ matrix.testname }}_testrun
+
+            - name: Plot spectrum kilonova
+              if: always() && matrix.testname == 'nebularonezone' && matrix.testmode == 'OFF'
+              working-directory: tests/
+              run: |
+                  at plotspectra -t 2 ${{ matrix.testname }}_testrun
+                  at plotspectra --frompackets -t 2 ${{ matrix.testname }}_testrun
 
             - name: Upload plot files
               if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
