--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
                         kilonova_1d_3dgrid,
                         kilonova_2d_2dgrid,
                         kilonova_2d_2dgrid_expansionopac,
+                        kilonova_2d_2dgrid_xcomgammaphotoion,
                         kilonova_2d_3dgrid,
                         nebularonezone_1d_3dgrid,
                     ]
