Set checksums for xcom test

--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -40,6 +40,8 @@ jobs:
 
             - uses: ZedThree/clang-tidy-review@v0.14.0
               id: review
+              with:
+                  lgtm_comment_body: ''
 
             # Uploads an artefact containing clang_fixes.json
             - uses: ZedThree/clang-tidy-review/upload@v0.14.0
