--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -238,19 +238,24 @@ jobs:
               if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'nebularonezone')
               working-directory: tests/
               run: |
-                  at plotspectra -ts 8 ${{ matrix.testname }}_testrun
+                  at plotspectra --frompackets -ts 8 ${{ matrix.testname }}_testrun
 
-            - name: Plot spectrum classicmode
+            - name: Plot spectrum classicmode_1d
               if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'classicmode_1d')
               working-directory: tests/
               run: |
                   at plotspectra --frompackets -t 18-22 ${{ matrix.testname }}_testrun
 
+            - name: Plot spectrum classicmode_1d
+              if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'classicmode_3d')
+              working-directory: tests/
+              run: |
+                  at plotspectra --frompackets -t 4-6 ${{ matrix.testname }}_testrun
+
             - name: Plot spectrum kilonova
               if: always() && matrix.testmode == 'OFF' && startsWith(matrix.testname, 'kilonova')
               working-directory: tests/
               run: |
-                  at plotspectra -t 2 ${{ matrix.testname }}_testrun
                   at plotspectra --frompackets -t 2 ${{ matrix.testname }}_testrun
 
             - name: Upload plot files
