--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,19 +53,15 @@ jobs:
                   compiler: gcc
                   version: 13
 
-            # - name: install dependencies
-            #   if: matrix.os != 'selfhosted'
-            #   run: |
-            #       git status
-            #       sudo apt update
-            #       sudo apt install -y gcc-13 g++-13
-            #       sudo apt install -y libgsl-dev
-            #       sudo apt install -y openmpi-bin libopenmpi-dev
-            #       echo "OMPI_CXX=g++-13" >> $GITHUB_ENV
+            - name: install gsl and openmpi
+              run: |
+                  sudo apt install -y libgsl-dev
+                  sudo apt install -y openmpi-bin libopenmpi-dev
 
             - name: CPU type and core count
               id: cpu-count
               run: |
+                  echo "CXX=g++-13" >> $GITHUB_ENV
                   echo "OMPI_CXX=g++-13" >> $GITHUB_ENV
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   python3 -c 'import multiprocessing; print(f"CPU count: {multiprocessing.cpu_count()}")'
