--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
                   sudo apt-get update
 
             - name: Install gcc
+              if: always() && matrix.testmode == 'OFF'
               uses: fortran-lang/setup-fortran@v1
               with:
                   compiler: gcc
@@ -66,11 +67,21 @@ jobs:
                   sudo apt install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
 
-            - name: CPU type and core count
-              id: cpu-count
+            - name: Set gcc-13 as CXX and OMPI_CXX
+              if: always() && matrix.testmode == 'OFF'
               run: |
                   echo "CXX=g++-13" >> $GITHUB_ENV
                   echo "OMPI_CXX=g++-13" >> $GITHUB_ENV
+
+            - name: Set g++ as CXX and OMPI_CXX
+              if: always() && matrix.testmode == 'ON'
+              run: |
+                  echo "CXX=g++" >> $GITHUB_ENV
+                  echo "OMPI_CXX=g++" >> $GITHUB_ENV
+
+            - name: CPU type and core count
+              id: cpu-count
+              run: |
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   python3 -c 'import multiprocessing; print(f"CPU count: {multiprocessing.cpu_count()}")'
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
@@ -145,7 +156,7 @@ jobs:
               run: cat job0/output_0-0.txt
 
             - name: Checksum job0 output files
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   md5sum *.out job0/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_job0.txt
@@ -197,14 +208,14 @@ jobs:
                   cat exspec.txt
 
             - name: Checksum job1 output files
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   md5sum *.out job1/*.out | tee ../${{ matrix.testname }}_inputfiles/results_md5_final.txt
                   if [ -f results_md5_final.txt ]; then md5sum -c results_md5_final.txt; else echo "results_md5_final.txt not found"; fi
 
             - name: Prepare for next steps
-              if: always() && matrix.os != 'selfhosted'
+              if: always()
               working-directory: tests/${{ matrix.testname }}_testrun
               run: |
                   touch requirements.txt
@@ -212,20 +223,20 @@ jobs:
 
             - name: Upload output files
               uses: actions/upload-artifact@v4
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               with:
                   name: test-${{ matrix.testname }}-output
                   path: tests/${{ matrix.testname }}_testrun
 
             - name: Upload checksum files
               uses: actions/upload-artifact@v4
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               with:
                   name: ${{ matrix.testname }}_inputfiles
                   path: tests/${{ matrix.testname }}_inputfiles/results_md5*
 
             - name: Set up Python
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               uses: actions/setup-python@v5
               with:
                   python-version: '3.12'
@@ -269,7 +280,7 @@ jobs:
                   at plotspectra --frompackets -t 2 ${{ matrix.testname }}_testrun
 
             - name: Upload plot files
-              if: always() && matrix.os != 'selfhosted' && matrix.testmode == 'OFF'
+              if: always() && matrix.testmode == 'OFF'
               uses: actions/upload-artifact@v4
               with:
                   name: test-${{ matrix.testname }}-output-pdf
