--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
                   sudo add-apt-repository multiverse
                   sudo apt-get update
 
-            - name: Install gcc
+            - name: Install gcc-13
               if: always() && matrix.testmode == 'OFF'
               uses: fortran-lang/setup-fortran@v1
               with:
