--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
                   sudo apt-get update
 
             - name: Install gcc-13
-              if: always() && matrix.testmode == 'OFF'
+              if: always()
               uses: fortran-lang/setup-fortran@v1
               with:
                   compiler: gcc
@@ -66,18 +66,6 @@ jobs:
               run: |
                   sudo apt install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
-
-            - name: Set gcc-13 as CXX and OMPI_CXX
-              if: always() && matrix.testmode == 'OFF'
-              run: |
-                  echo "CXX=g++-13" >> $GITHUB_ENV
-                  echo "OMPI_CXX=g++-13" >> $GITHUB_ENV
-
-            - name: Set g++ as CXX and OMPI_CXX
-              if: always() && matrix.testmode == 'ON'
-              run: |
-                  echo "CXX=g++" >> $GITHUB_ENV
-                  echo "OMPI_CXX=g++" >> $GITHUB_ENV
 
             - name: CPU type and core count
               id: cpu-count
@@ -124,8 +112,6 @@ jobs:
 
             - name: Compile
               run: |
-                  mpicxx --version
-                  mpicxx --showme:version
                   make TESTMODE=${{ matrix.testmode }} MPI=ON FASTMATH=OFF -j${{ steps.cpu-count.outputs.count }} sn3d exspec
                   cp sn3d tests/${{ matrix.testname }}_testrun/
                   cp exspec tests/${{ matrix.testname }}_testrun/
