--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -180,6 +180,7 @@ jobs:
 
             - name: Compile classic mode
               run: |
+                  $CXX -v
                   cp -v -p artisoptions_classic.h artisoptions.h
                   make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} ${{ matrix.stdpar == 'ON' && ' STDPAR=ON' || ''}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
