Squashed commit of the following:
commit cb5d80656b7c8fe270dba76ee0dc45107e1c2b18
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Fri Mar 22 09:09:22 2024 +0000

    Update Makefile

commit 8417a3b3e4686c2f3ae0469932049166df5e41ce
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Fri Mar 22 08:53:21 2024 +0000

    Update radfield.cc

commit ef49dcef8b7420d78999b34c437581ce14533f24
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Fri Mar 22 08:38:54 2024 +0000

    Update sn3d.h

commit 941ea3000037e05d10456cd8d6ee515583a604f6
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Fri Mar 22 08:35:20 2024 +0000

    Update ratecoeff.h

commit 49b653f88423fed1178255822a419d608308fa57
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 16:54:15 2024 +0000

    Update radfield.cc

commit bcba6cd70662e6f43c68932ac9e6478f8296b9ee
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 16:53:54 2024 +0000

    Update thermalbalance.cc

commit 820822c5b5293b3aa879cffbae9d28eeb932b301
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 16:46:41 2024 +0000

    Update ratecoeff.cc

commit 7bb93f984edad707af93812b8ce1f473b37a55cf
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 16:46:25 2024 +0000

    Update radfield.cc

commit c90c28ee2f233b7a03d6628f5f718efeeeb1035d
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 13:19:09 2024 +0000

    Update sn3d.cc

commit e7a329dc9184184c3fbb0991d2631448f37fd59e
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 11:27:18 2024 +0000

    Update Makefile

commit 3361b3ee06a54448e7af1d368819fd71ed6aa6f4
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 11:17:35 2024 +0000

    Add USE_SIMPSON_INTEGRATOR constant

commit b88dedf356041a368971f9f51a947eab6272c805
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Thu Mar 21 09:39:14 2024 +0000

    thermalbalance.cc: use integrator template

commit fd9524

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -40,7 +40,7 @@ jobs:
             - name: Run clang-format style check
               uses: jidicula/clang-format-action@v4.11.0
               with:
-                  clang-format-version: '16'
+                  clang-format-version: '18'
                   check-path: .
 
     clang-tidy:
@@ -62,9 +62,6 @@ jobs:
               run: |
                   brew install llvm || true
                   echo "/opt/homebrew/opt/llvm/bin" >> $GITHUB_PATH
-
-                  echo "CXX=clang++" >> $GITHUB_ENV
-                  echo "OMPI_CXX=clang++" >> $GITHUB_ENV
 
                   echo "LDFLAGS=-L/opt/homebrew/opt/llvm/lib" >> $GITHUB_ENV
                   echo "CPPFLAGS=-I/opt/homebrew/opt/llvm/include" >> $GITHUB_ENV
@@ -111,15 +108,13 @@ jobs:
                         {name: gcc, ver: 12},
                         {name: gcc, ver: 13},
                         # {name: gcc, ver: 14},
-                        {name: nvc++, ver: '24.1'},
+                        {name: nvc++, ver: '24.3'},
                     ]
                 mpi: [ON, OFF]
                 openmp: [ON, OFF]
                 stdpar: [ON, OFF]
                 exclude:
                     - openmp: ON
-                      stdpar: ON
-                    - compiler: {name: nvc++, ver: '24.1'}
                       stdpar: ON
             fail-fast: false
 
@@ -131,20 +126,12 @@ jobs:
               id: cpu-count
               run: |
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
-                  # echo "count=$(python3 -c 'import psutil; print(int(psutil.cpu_count(logical=False)))')" >> $GITHUB_OUTPUT
+                  python3 -c 'import multiprocessing; print(f"CPU count: {multiprocessing.cpu_count()}")'
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
-
-            - name: apt update
-              run: |
-                  sudo add-apt-repository main
-                  sudo add-apt-repository universe
-                  sudo add-apt-repository restricted
-                  sudo add-apt-repository multiverse
-                  sudo apt-get update
 
             - name: Install gcc
               if: matrix.compiler.name == 'gcc'
-              uses: fortran-lang/setup-fortran@adec3afacab7018f30d4e2cadae1cb42530aeaf5
+              uses: fortran-lang/setup-fortran@v1
               #   continue-on-error: true
               with:
                   compiler: gcc
@@ -152,7 +139,7 @@ jobs:
 
             - name: Install gcc for nvc++
               if: matrix.compiler.name == 'nvc++'
-              uses: fortran-lang/setup-fortran@adec3afacab7018f30d4e2cadae1cb42530aeaf5
+              uses: fortran-lang/setup-fortran@v1
               continue-on-error: true
               with:
                   compiler: gcc
@@ -160,11 +147,17 @@ jobs:
 
             - name: Install nvc++
               if: matrix.compiler.name == 'nvc++'
-              uses: fortran-lang/setup-fortran@adec3afacab7018f30d4e2cadae1cb42530aeaf5
+              uses: fortran-lang/setup-fortran@v1
               #   continue-on-error: true
               with:
                   compiler: nvidia-hpc
                   version: ${{ matrix.compiler.ver }}
+
+            - name: Set nvc++ as compiler
+              if: matrix.compiler.name == 'nvc++'
+              run: |
+                  echo "CXX=nvc++" >> $GITHUB_ENV
+                  echo "OMPI_CXX=nvc++" >> $GITHUB_ENV
 
             - name: install gsl
               run: |
@@ -179,27 +172,23 @@ jobs:
               if: matrix.mpi == 'ON'
               run: |
                   sudo apt install -y openmpi-bin libopenmpi-dev
-                  echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
-                  echo "CXX=mpicxx" >> $GITHUB_ENV
-                  mpicxx --showme:version
 
             - name: install OpenMP
               if: matrix.openmp == 'ON'
               run: |
                   sudo apt-get install -y libomp5-14 libomp-dev
 
-            - name: Show compiler version and CPU type
-              run: |
-                  ${{ env.CXX }} --version
-
             - name: Compile classic mode
               run: |
+                  $CXX -v
                   cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} ${{ matrix.stdpar == 'ON' && ' STDPAR=ON' || ''}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
 
             - name: Compile nebular mode
               run: |
                   cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} ${{ matrix.stdpar == 'ON' && ' STDPAR=ON' || ''}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
 
     mac-llvm:
@@ -241,9 +230,6 @@ jobs:
                   brew install llvm@17 || true
                   echo "/opt/homebrew/opt/llvm/bin" >> $GITHUB_PATH
 
-                  echo "CXX=clang++" >> $GITHUB_ENV
-                  echo "OMPI_CXX=clang++" >> $GITHUB_ENV
-
             - name: install OpenMP
               if: matrix.openmp == 'ON'
               run: |
@@ -258,10 +244,6 @@ jobs:
               run: |
                   brew install openmpi || true
 
-                  echo "OMPI_CXX=$CXX" >> $GITHUB_ENV
-                  echo "CXX=mpicxx" >> $GITHUB_ENV
-                  mpicxx --showme:version
-
             - name: install onedpl and tbb
               if: matrix.stdpar == 'ON'
               run: |
@@ -271,16 +253,14 @@ jobs:
                   echo "LD_LIBRARY_PATH=$HOMEBREW_PREFIX/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
                   echo "CPATH=$HOMEBREW_PREFIX/include:$CPATH" >> $GITHUB_ENV
 
-            - name: Show compiler version and CPU type
-              run: |
-                  ${{ env.CXX }} --version
-
             - name: Compile classic mode
               run: |
                   cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} ${{ matrix.stdpar == 'ON' && ' STDPAR=ON' || ''}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
 
             - name: Compile nebular mode
               run: |
                   cp -v -p artisoptions_classic.h artisoptions.h
+                  make clean
                   make MPI=${{matrix.mpi}} OPENMP=${{matrix.openmp}} ${{ matrix.stdpar == 'ON' && ' STDPAR=ON' || ''}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
