--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -148,7 +148,7 @@ jobs:
             - name: Install cuda-toolkit
               if: matrix.compiler.name == 'nvc++'
               run: |
-                  sudo apt-get -y install cuda-toolkit
+                  sudo apt-get -y install nvidia-cuda-toolkit
                   echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
 
             - name: Install nvc++
