--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -145,11 +145,11 @@ jobs:
                   compiler: gcc
                   version: 13
 
-            - name: Install cuda-toolkit
-              if: matrix.compiler.name == 'nvc++'
-              run: |
-                  sudo apt-get -y install nvidia-cuda-toolkit
-                  echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
+            # - name: Install cuda-toolkit
+            #   if: matrix.compiler.name == 'nvc++'
+            #   run: |
+            #       sudo apt-get -y install nvidia-cuda-toolkit
+            #       echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
 
             - name: Install nvc++
               if: matrix.compiler.name == 'nvc++'
