--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
                         kilonova_2d_2dgrid,
                         kilonova_2d_3dgrid,
                         nebularonezone_1d_3dgrid,
+                        nebularonezone_1d_3dgrid_limitbfest,
                     ]
                 exclude:
                     - os: self-hosted
