--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,11 @@ jobs:
 
             - name: apt update
               run: |
-                  sudo add-apt-repository main
-                  sudo add-apt-repository universe
-                  sudo add-apt-repository restricted
-                  sudo add-apt-repository multiverse
-                  sudo apt-get update
+                  #   sudo add-apt-repository main
+                  #   sudo add-apt-repository universe
+                  #   sudo add-apt-repository restricted
+                  #   sudo add-apt-repository multiverse
+                    sudo apt-get update
 
             - name: Install gcc-13
               if: always()
