Squashed commit of the following:
commit d76755433ea8872a92d8ecda16d7cb4689482164
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Tue Apr 23 08:50:00 2024 +0100

    Update .clang-tidy

commit 507fd1f74966d5ccdb0a860e2fd5ca7b04b31e0e
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 09:36:40 2024 +0100

    Revert "Update ci-checks.yml"

    This reverts commit 6e4508ae8a0efdaadd4f5a0d735a601493603d4b.

commit 6e4508ae8a0efdaadd4f5a0d735a601493603d4b
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 08:58:46 2024 +0100

    Update ci-checks.yml

commit 538b976b4ca7653eeabb93ad9ab15c620a82d744
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 08:56:52 2024 +0100

    Update ci-checks.yml

commit f6634c63d5263b438d3e1eb373ba461200bb7620
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 08:54:08 2024 +0100

    Update ci-checks.yml

commit 946c51af0a70869aecbd9777bdaccb8f2bec6c9e
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 08:48:32 2024 +0100

    Update ci-checks.yml

commit ecea2ef41825f7c878c62be695b3941f088af91f
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Mon Apr 22 08:46:57 2024 +0100

    Update ci-checks.yml

commit 9f292b188c223c1c91f0aea1d1de2e4afde3d8aa
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Sun Apr 21 22:55:58 2024 +0100

    Update ci-checks.yml

commit 667602a241f48938ce6d24b1e3fe6b1ff27aa3d2
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Sun Apr 21 22:46:50 2024 +0100

    Update gammapkt.cc

commit ef779e218ea4774143803a5a699d989b0564dd4d
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Sun Apr 21 22:43:03 2024 +0100

    const args to vec_scale

commit 0b5b13a6879d812f8c2a6ea5a863b2202140160f
Author: Luke Shingles <luke.shingles@gmail.com>
Date:   Sun Apr 21 22:09:21 2024 +0100

    Revert "Update vectors.h"

    This reverts commit 64a1b5f07bccf5d3cfd3c0bd0b3b63276cf5ba5d.

commit 5cbc028eda28a63cffbc9ad5ca8f15

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -25,12 +25,12 @@ jobs:
             - name: run cppcheck and check for errors
               run: |
                   cppcheck --version
-                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability  --suppress=memleak .
+                  cppcheck --force --error-exitcode=1 --language=c++ --std=c++20 --enable=warning,performance,portability  --suppress=memleak --check-level=exhaustive .
 
             - name: show cppcheck style suggestions
               run: |
                   cppcheck --version
-                  cppcheck --force --language=c++ --std=c++20 --enable=style --suppress=knownConditionTrueFalse .
+                  cppcheck --force --language=c++ --std=c++20 --enable=style --suppress=knownConditionTrueFalse --check-level=exhaustive .
 
     clang-format:
         runs-on: ubuntu-22.04
@@ -66,7 +66,6 @@ jobs:
                   echo "LDFLAGS=-L/opt/homebrew/opt/llvm/lib" >> $GITHUB_ENV
                   echo "CPPFLAGS=-I/opt/homebrew/opt/llvm/include" >> $GITHUB_ENV
 
-                  echo "LDFLAGS=-L/opt/homebrew/opt/libomp/lib" >> $GITHUB_ENV
                   echo "CXXFLAGS=-I/opt/homebrew/opt/libomp/include" >> $GITHUB_ENV
 
                   echo "LIBRARY_PATH=/opt/homebrew/opt/lib" >> $GITHUB_ENV
@@ -211,7 +210,7 @@ jobs:
                       stdpar: ON
             fail-fast: false
 
-        name: macOS clang 17 ${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}${{ matrix.stdpar == 'ON' && ' stdpar' || ''}}
+        name: macOS brew clang ${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}${{ matrix.stdpar == 'ON' && ' stdpar' || ''}}
 
         steps:
             - uses: actions/checkout@v4
@@ -233,8 +232,10 @@ jobs:
 
             - name: install llvm
               run: |
-                  brew install llvm@17 || true
+                  brew install llvm || true
                   echo "/opt/homebrew/opt/llvm/bin" >> $GITHUB_PATH
+                  echo "LDFLAGS=-L/opt/homebrew/opt/llvm/lib/c++ -Wl,-rpath,/opt/homebrew/opt/llvm/lib/c++ $LDFLAGS" >> $GITHUB_ENV
+                  echo "CXX=clang++" >> $GITHUB_ENV
 
             - name: install OpenMP
               if: matrix.openmp == 'ON'
@@ -242,8 +243,8 @@ jobs:
                   brew install libomp || true
                   brew link --force libomp
 
-                  echo "LDFLAGS=-L/opt/homebrew/opt/libomp/lib" >> $GITHUB_ENV
-                  echo "CPPFLAGS=-I/opt/homebrew/opt/libomp/include" >> $GITHUB_ENV
+                  echo "LDFLAGS=-L/opt/homebrew/opt/libomp/lib $LDFLAGS" >> $GITHUB_ENV
+                  echo "CXXFLAGS=-I/opt/homebrew/opt/libomp/include $CXXFLAGS" >> $GITHUB_ENV
 
             - name: install OpenMPI
               if: matrix.mpi == 'ON'
