--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -102,11 +102,12 @@ jobs:
             CXX: g++
         strategy:
             matrix:
-                compiler: [
+                compiler:
+                    [
                         {name: gcc, ver: 11},
                         {name: gcc, ver: 12},
                         {name: gcc, ver: 13},
-                        # {name: gcc, ver: 14},
+                        {name: gcc, ver: 14},
                         {name: nvc++, ver: '24.3'},
                     ]
                 mpi: [ON, OFF]
