Use gcc-14 for CI checks

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -97,18 +97,17 @@ jobs:
                   run-clang-tidy
 
     compile:
-        runs-on: ubuntu-24.04
         env:
             CXX: g++
         strategy:
             matrix:
                 compiler:
                     [
-                        {name: gcc, ver: 11},
-                        {name: gcc, ver: 12},
-                        {name: gcc, ver: 13},
-                        {name: gcc, ver: 14},
-                        {name: nvc++, ver: '24.3'},
+                        {os: ubuntu-24.04, name: gcc, ver: 11},
+                        {os: ubuntu-24.04, name: gcc, ver: 12},
+                        {os: ubuntu-24.04, name: gcc, ver: 13},
+                        {os: ubuntu-24.04, name: gcc, ver: 14},
+                        {os: ubuntu-22.04, name: nvc++, ver: '24.3'},
                     ]
                 mpi: [ON, OFF]
                 openmp: [ON, OFF]
@@ -118,6 +117,7 @@ jobs:
                       stdpar: ON
             fail-fast: false
 
+        runs-on: ${{ matrix.compiler.os }}
         name: ${{ matrix.compiler.name }} ${{ matrix.compiler.ver }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}${{ matrix.openmp == 'ON' && ' OpenMP' || ''}}${{ matrix.stdpar == 'ON' && ' stdpar' || ''}}
         steps:
             - uses: actions/checkout@v4
